<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#D771EF">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/tvQuiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_1"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            />

        <TextView
            android:id="@+id/tvMatkul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mata_kuliah_mobile_programing_ti21k1"
            android:textSize="15sp"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/div1"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="2dp">

        </com.google.android.material.divider.MaterialDivider>

        <TextView
            android:id="@+id/tvNim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nim_202111015"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:id="@+id/tvNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama_zahudin"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:id="@+id/tvKelas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kelas_ti21k1"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/div2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="15dp">

        </com.google.android.material.divider.MaterialDivider>

        <Button
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/_1_jawaban_no_1"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/_2_jawaban_no_2"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/btn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/_3_jawaban_no_3"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/btn4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/_4_jawaban_no_4"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/btn5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/_5_jawaban_no_5"
            android:textSize="20sp"/>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>